[gd_scene load_steps=3 format=3 uid="uid://bvqroby1huw0p"]

[ext_resource type="Script" uid="uid://delfj4tkaxo82" path="res://Entities/Objects/Components/SurpriseComponents/surprise_component.gd" id="1_4fc2u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yo5c"]
size = Vector2(80, 40)

[node name="SurpriseComponent" type="Node2D" node_paths=PackedStringArray("node")]
script = ExtResource("1_4fc2u")
node = NodePath("")
area_offset = Vector2(0, -15)

[node name="ShowArea" type="Area2D" parent="."]
position = Vector2(0, -31)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShowArea"]
shape = SubResource("RectangleShape2D_1yo5c")

[connection signal="body_entered" from="ShowArea" to="." method="_on_show_area_body_entered"]
[connection signal="body_exited" from="ShowArea" to="." method="_on_show_area_body_exited"]
